Prevent close icon from overlapping text in Watch expressions
Bug: 1251905

--- a/front_end/panels/sources/watchExpressionsSidebarPane.css
+++ b/front_end/panels/sources/watchExpressionsSidebarPane.css
@@ -12,7 +12,7 @@
   opacity: 0%;
 }
 
-.watch-expression-header:hover .watch-expression-delete-button {
+.watch-expression-title:hover .watch-expression-delete-button {
   opacity: 100%;
 }
 
@@ -108,7 +108,7 @@ li.watch-expression-editing::before {
 }
 
 @media (forced-colors: active) {
-  .watch-expression-header:hover .watch-expression-delete-button,
+  .watch-expression-title:hover .watch-expression-delete-button,
   .watch-expressions .dimmed {
     opacity: 100%;
   }
